--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 		 id="WebApp_ID" version="2.5">
 	<display-name>ToDo</display-name>
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>/pages/welcome.jsp</welcome-file>
 	</welcome-file-list>
 	<filter>
 		<filter-name>struts2</filter-name>
